[gd_scene load_steps=5 format=2]

[ext_resource path="res://part.tscn" type="PackedScene" id=1]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://IKLimb.tscn" type="PackedScene" id=3]
[ext_resource path="res://Editor.gd" type="Script" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Arm" parent="." instance=ExtResource( 3 )]
position = Vector2( 34.7766, 67.2912 )

[node name="HUD" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 816.78
margin_top = -0.991149
margin_right = 816.78
margin_bottom = -0.991149
size_flags_vertical = 3

[node name="bodyParent" parent="." instance=ExtResource( 1 )]
position = Vector2( 392.862, 452.352 )

[connection signal="HUDstate" from="." to="HUD" method="_HUDstate"]
[connection signal="body_clicked" from="." to="HUD" method="_on_body_bodypart_clicked"]
[connection signal="voidClick" from="." to="HUD" method="_on_voidClick"]
[connection signal="send_bodyData" from="HUD" to="." method="_on_HUD_send_bodyData"]
[connection signal="FKButton_mouse_isOver" from="bodyParent" to="." method="_handle_mouseList"]
[connection signal="bodyButton_mouse_isOver" from="bodyParent" to="." method="_handle_mouseList"]
